# hawkeye

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  close.sh  run-with-ground-filter.sh  run.sh
hawkeye/: CMakeLists.txt
hawkeye/src/: apriltag_process.c  apriltag_process.h  config.c  jpeg_utils.c  jpeg_utils.h  main.c  settings.c  settings.h
src/: Makefile  apriltag_process.c  bitmap.c  bitmap.h  cc_detect.c  cc_detect.h  color_detect.c  color_detect.h  config.c  config.h  daemon.c  frames.c  frames.h  image_utils.c  image_utils.h  jpeg_utils.c  jpeg_utils.h  logger.c  logger.h  main.c  memory.c  memory.h  settings.c  settings.h  stripe_filter.c  stripe_filter.h  v4l2uvc.c  v4l2uvc.h
